# conciliacion-geo-v02

./: .coverage  .dockerignore  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile-api  Dockerfile-web  LICENSE  README.md  app.py  check_proc.ps1  check_procs.ps1  cli.py  conciliacion-api.spec  descripcion de columnas carguio enaex.csv  dev-electron.sh  dev.sh  docker-compose.yml  ejemplo_secciones.json  entry_api.py  kill_uvicorn.ps1  pyproject.toml  pytest_out.txt  render.yaml  requirements-api.txt  requirements.txt  test_perf.py  test_pipeline.py  verify_azimuth_convention.py  verify_azimuth_logic.py  verify_changes.py
.antigravitycli/: 8c6923be-6151-43de-b8c1-82c482c3cc55.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.streamlit/: config.toml
api/: __init__.py  _async_db.py  database.py  main.py  main_legacy.py  middleware.py  middleware_auth.py  middleware_ratelimit.py  schemas.py
app/: app.py
core/: __init__.py  ai_reporter.py  ai_service.py  alert_system.py  backbreak_prediction.py  bench_classify.py  bench_hazards.py  blast_achievement.py  blast_advisor.py  blast_attribution.py  blast_correlation.py  blast_metrics.py  blast_model.py  breaklines.py  calculo_tronadura.py  column_mapping.py  column_utils.py  compliance_status.py  config.py  drill_compliance.py  drill_hardness.py  drill_hardness_processor.py  excel_writer.py  explosive_properties.py  geology.py  geom_utils.py  mesh_handler.py  param_extractor.py  pdf_report.py  profile_compliance.py  profile_extract.py  profile_simplify.py  radar_simulator.py  report_generator.py  section_cutter.py  (+2 more)
openblast/tools/: pyproject.toml
openblast/tools/openblast/: __init__.py  __main__.py
(+502 files in other folders)
